RASP_support/zzantlr/RASPParser.py
# Generated from RASP.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class RASPParser ( Parser ):

    grammarFileName = "RASP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'set'", "'s-op'", "'selector'", 
                     "'example'", "'show'", "'full seq display'", "'on'", 
                     "'off'", "'examples'", "'exit()'", "'exit'", "'quit'", 
                     "'quit()'", "'load'", "'='", "'draw'", "'('", "','", 
                     "')'", "':'", "'def'", "'{'", "'}'", "'for'", "'in'", 
                     "'return'", "':agg'", "'aggregate'", "'['", "']'", 
                     "'not'", "'-'", "'+'", "'round'", "'indicator'", "'atoi'", 
                     "'itoa'", "'^'", "'*'", "'/'", "'%'", "'=='", "'<='", 
                     "'>='", "'>'", "'<'", "':sel'", "'select'", "'!='", 
                     "'and'", "'or'", "'if'", "'else'", "'range('", "'zip('", 
                     "'len('" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Float", "PosInt", "String", 
                      "Comment", "ID", "WS" ]

    RULE_r = 0
    RULE_statement = 1
    RULE_raspstatement = 2
    RULE_replstatement = 3
    RULE_setExample = 4
    RULE_showExample = 5
    RULE_toggleSeqVerbose = 6
    RULE_toggleExample = 7
    RULE_exit = 8
    RULE_loadFile = 9
    RULE_assign = 10
    RULE_draw = 11
    RULE_exprsList = 12
    RULE_namedExprsList = 13
    RULE_namedExpr = 14
    RULE_raspstatementsList = 15
    RULE_funcDef = 16
    RULE_forLoop = 17
    RULE_commentsList = 18
    RULE_assignsAndCommentsList = 19
    RULE_returnStatement = 20
    RULE_idsList = 21
    RULE_aggregateExpr = 22
    RULE_atom = 23
    RULE_expr = 24
    RULE_aList = 25
    RULE_aDict = 26
    RULE_listCompExpr = 27
    RULE_dictCompExpr = 28

    ruleNames =  [ "r", "statement", "raspstatement", "replstatement", "setExample", 
                   "showExample", "toggleSeqVerbose", "toggleExample", "exit", 
                   "loadFile", "assign", "draw", "exprsList", "namedExprsList", 
                   "namedExpr", "raspstatementsList", "funcDef", "forLoop", 
                   "commentsList", "assignsAndCommentsList", "returnStatement", 
                   "idsList", "aggregateExpr", "atom", "expr", "aList", 
                   "aDict", "listCompExpr", "dictCompExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    Float=58
    PosInt=59
    String=60
    Comment=61
    ID=62
    WS=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RASPParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RASPParser.StatementContext)
            else:
                return self.getTypedRuleContext(RASPParser.StatementContext,i)


        def getRuleIndex(self):
            return RASPParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitR" ):
                return visitor.visitR(self)
            else:
                return visitor.visitChildren(self)




    def r(self):

        localctx = RASPParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_r)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59 
            self._errHandler.sync(self)
            _alt = 1+1
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1+1:
                    self.state = 58
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 61 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 63
            self.match(RASPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def raspstatement(self):
            return self.getTypedRuleContext(RASPParser.RaspstatementContext,0)


        def Comment(self):
            return self.getToken(RASPParser.Comment, 0)

        def replstatement(self):
            return self.getTypedRuleContext(RASPParser.ReplstatementContext,0)


        def getRuleIndex(self):
            return RASPParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = RASPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RASPParser.T__14, RASPParser.T__16, RASPParser.T__17, RASPParser.T__21, RASPParser.T__22, RASPParser.T__24, RASPParser.T__27, RASPParser.T__28, RASPParser.T__29, RASPParser.T__31, RASPParser.T__32, RASPParser.T__33, RASPParser.T__34, RASPParser.T__35, RASPParser.T__36, RASPParser.T__37, RASPParser.T__47, RASPParser.T__48, RASPParser.T__54, RASPParser.T__55, RASPParser.T__56, RASPParser.Float, RASPParser.PosInt, RASPParser.String, RASPParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.raspstatement()
                self.state = 67
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 66
                    self.match(RASPParser.Comment)


                pass
            elif token in [RASPParser.T__1, RASPParser.T__2, RASPParser.T__3, RASPParser.T__5, RASPParser.T__6, RASPParser.T__9, RASPParser.T__10, RASPParser.T__11, RASPParser.T__12, RASPParser.T__13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.replstatement()
                self.state = 71
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 70
                    self.match(RASPParser.Comment)


                pass
            elif token in [RASPParser.Comment]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.match(RASPParser.Comment)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RaspstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(RASPParser.ExprContext,0)


        def assign(self):
            return self.getTypedRuleContext(RASPParser.AssignContext,0)


        def draw(self):
            return self.getTypedRuleContext(RASPParser.DrawContext,0)


        def loadFile(self):
            return self.getTypedRuleContext(RASPParser.LoadFileContext,0)


        def funcDef(self):
            return self.getTypedRuleContext(RASPParser.FuncDefContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(RASPParser.ForLoopContext,0)


        def getRuleIndex(self):
            return RASPParser.RULE_raspstatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRaspstatement" ):
                listener.enterRaspstatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRaspstatement" ):
                listener.exitRaspstatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRaspstatement" ):
                return visitor.visitRaspstatement(self)
            else:
                return visitor.visitChildren(self)




    def raspstatement(self):

        localctx = RASPParser.RaspstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_raspstatement)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.expr(0)
                self.state = 77
                self.match(RASPParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.assign()
                self.state = 80
                self.match(RASPParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.draw()
                self.state = 83
                self.match(RASPParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.loadFile()
                self.state = 86
                self.match(RASPParser.T__0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.funcDef()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.forLoop()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReplstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setExample(self):
            return self.getTypedRuleContext(RASPParser.SetExampleContext,0)


        def showExample(self):
            return self.getTypedRuleContext(RASPParser.ShowExampleContext,0)


        def toggleExample(self):
            return self.getTypedRuleContext(RASPParser.ToggleExampleContext,0)


        def toggleSeqVerbose(self):
            return self.getTypedRuleContext(RASPParser.ToggleSeqVerboseContext,0)


        def exit(self):
            return self.getTypedRuleContext(RASPParser.ExitContext,0)


        def getRuleIndex(self):
            return RASPParser.RULE_replstatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReplstatement" ):
                listener.enterReplstatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReplstatement" ):
                listener.exitReplstatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReplstatement" ):
                return visitor.visitReplstatement(self)
            else:
                return visitor.visitChildren(self)




    def replstatement(self):

        localctx = RASPParser.ReplstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_replstatement)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RASPParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.setExample()
                pass
            elif token in [RASPParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.showExample()
                pass
            elif token in [RASPParser.T__2, RASPParser.T__3, RASPParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.toggleExample()
                pass
            elif token in [RASPParser.T__6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.toggleSeqVerbose()
                pass
            elif token in [RASPParser.T__10, RASPParser.T__11, RASPParser.T__12, RASPParser.T__13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 96
                self.exit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetExampleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.subset = None # Token
            self.example = None # ExprContext

        def expr(self):
            return self.getTypedRuleContext(RASPParser.ExprContext,0)


        def getRuleIndex(self):
            return RASPParser.RULE_setExample

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetExample" ):
                listener.enterSetExample(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetExample" ):
                listener.exitSetExample(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetExample" ):
                return visitor.visitSetExample(self)
            else:
                return visitor.visitChildren(self)




    def setExample(self):

        localctx = RASPParser.SetExampleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_setExample)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(RASPParser.T__1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RASPParser.T__2 or _la==RASPParser.T__3:
                self.state = 100
                localctx.subset = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==RASPParser.T__2 or _la==RASPParser.T__3):
                    localctx.subset = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 103
            self.match(RASPParser.T__4)
            self.state = 104
            localctx.example = self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ShowExampleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.subset = None # Token


        def getRuleIndex(self):
            return RASPParser.RULE_showExample

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowExample" ):
                listener.enterShowExample(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowExample" ):
                listener.exitShowExample(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowExample" ):
                return visitor.visitShowExample(self)
            else:
                return visitor.visitChildren(self)




    def showExample(self):

        localctx = RASPParser.ShowExampleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_showExample)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(RASPParser.T__5)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RASPParser.T__2 or _la==RASPParser.T__3:
                self.state = 107
                localctx.subset = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==RASPParser.T__2 or _la==RASPParser.T__3):
                    localctx.subset = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 110
            self.match(RASPParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ToggleSeqVerboseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.switch = None # Token


        def getRuleIndex(self):
            return RASPParser.RULE_toggleSeqVerbose

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToggleSeqVerbose" ):
                listener.enterToggleSeqVerbose(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToggleSeqVerbose" ):
                listener.exitToggleSeqVerbose(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToggleSeqVerbose" ):
                return visitor.visitToggleSeqVerbose(self)
            else:
                return visitor.visitChildren(self)




    def toggleSeqVerbose(self):

        localctx = RASPParser.ToggleSeqVerboseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_toggleSeqVerbose)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(RASPParser.T__6)
            self.state = 113
            localctx.switch = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==RASPParser.T__7 or _la==RASPParser.T__8):
                localctx.switch = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ToggleExampleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.subset = None # Token
            self.switch = None # Token


        def getRuleIndex(self):
            return RASPParser.RULE_toggleExample

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToggleExample" ):
                listener.enterToggleExample(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToggleExample" ):
                listener.exitToggleExample(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitToggleExample" ):
                return visitor.visitToggleExample(self)
            else:
                return visitor.visitChildren(self)




    def toggleExample(self):

        localctx = RASPParser.ToggleExampleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_toggleExample)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RASPParser.T__2 or _la==RASPParser.T__3:
                self.state = 115
                localctx.subset = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==RASPParser.T__2 or _la==RASPParser.T__3):
                    localctx.subset = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 118
            self.match(RASPParser.T__9)
            self.state = 119
            localctx.switch = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==RASPParser.T__7 or _la==RASPParser.T__8):
                localctx.switch = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RASPParser.RULE_exit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExit" ):
                listener.enterExit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExit" ):
                listener.exitExit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExit" ):
                return visitor.visitExit(self)
            else:
                return visitor.visitChildren(self)




    def exit(self):

        localctx = RASPParser.ExitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RASPParser.T__10) | (1 << RASPParser.T__11) | (1 << RASPParser.T__12) | (1 << RASPParser.T__13))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LoadFileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.filename = None # Token

        def String(self):
            return self.getToken(RASPParser.String, 0)

        def getRuleIndex(self):
            return RASPParser.RULE_loadFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoadFile" ):
                listener.enterLoadFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoadFile" ):
                listener.exitLoadFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoadFile" ):
                return visitor.visitLoadFile(self)
            else:
                return visitor.visitChildren(self)




    def loadFile(self):

        localctx = RASPParser.LoadFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loadFile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(RASPParser.T__14)
            self.state = 124
            localctx.filename = self.match(RASPParser.String)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.var = None # IdsListContext
            self.val = None # ExprsListContext

        def idsList(self):
            return self.getTypedRuleContext(RASPParser.IdsListContext,0)


        def exprsList(self):
            return self.getTypedRuleContext(RASPParser.ExprsListContext,0)


        def getRuleIndex(self):
            return RASPParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = RASPParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            localctx.var = self.idsList()
            self.state = 127
            self.match(RASPParser.T__15)
            self.state = 128
            localctx.val = self.exprsList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DrawContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.unf = None # ExprContext
            self.inputseq = None # ExprContext

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RASPParser.ExprContext)
            else:
                return self.getTypedRuleContext(RASPParser.ExprContext,i)


        def getRuleIndex(self):
            return RASPParser.RULE_draw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDraw" ):
                listener.enterDraw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDraw" ):
                listener.exitDraw(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDraw" ):
                return visitor.visitDraw(self)
            else:
                return visitor.visitChildren(self)




    def draw(self):

        localctx = RASPParser.DrawContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_draw)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(RASPParser.T__16)
            self.state = 131
            self.match(RASPParser.T__17)
            self.state = 132
            localctx.unf = self.expr(0)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RASPParser.T__18:
                self.state = 133
                self.match(RASPParser.T__18)
                self.state = 134
                localctx.inputseq = self.expr(0)


            self.state = 137
            self.match(RASPParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprsListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.first = None # ExprContext
            self.cont = None # ExprsListContext

        def expr(self):
            return self.getTypedRuleContext(RASPParser.ExprContext,0)


        def exprsList(self):
            return self.getTypedRuleContext(RASPParser.ExprsListContext,0)


        def getRuleIndex(self):
            return RASPParser.RULE_exprsList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprsList" ):
                listener.enterExprsList(self)
